--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,34 @@ header {
 
 }
 
+.btn-style {
+    width: 106px;
+    padding: 12px 12px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    color: #185DC4;
+    border: 1px solid #185DC4;;
+    font-size: 0.8rem;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.reg-btn {
+    width: 106px;
+    padding: 12px 12px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(24, 93, 196);
+    color: white;
+    font-size: 0.8rem;
+    cursor: pointer
+}
+
+.btn-style:hover, .reg-btn:hover {
+    transform: scale(1.03);
+}
+
 /*******************CATEGORIAS**********************/
 
 .flex-categorias {
@@ -363,7 +391,7 @@ header {
     justify-content: center;
 }
 
-.fa-location-dot {
+.localizacao {
     background-color: rgb(216, 213, 213);
     padding: 8px 10px 10px 10px;
     border: 1px solid gray;
@@ -594,6 +622,13 @@ hr{
     font-size: 90px;
     color: white;
     text-align: center;
+}
+
+.carousel-img-size {
+    width: 70%;
+    height: 100%;
+    object-fit: fill;
+    border-radius: 5px;
 }
 
 .s1 {
